Closed Bug 1873976 Opened 2 years ago Closed 2 years ago

Incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path>

Categories

(Core :: Networking, defect, P3)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox129 --- fixed

People

(Reporter: valentin, Assigned: sekim)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

I'm also using this bug to track other relative file: failures

<..> against <file:///C:/>
<file:..> against http://www.example.com/test
etc

Duplicate of this bug: 1887614
No longer duplicate of this bug: 1887614
Assignee: nobody → sekim
Status: NEW → ASSIGNED

<..> against <file:///C:/> might need to be a separate patch, but I incorporated it in this patch.

Attachment #9405112 - Attachment description: WIP: Bug 1873976 - Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> → Bug 1873976 - Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> and <..> against <file:///C:/> r?valentin

I did a quick pass over the tests we expect to be fixed by this bug. I'm pretty sure these ones should be addressed here:

Parsing: < File:c|////foo\bar.html> against <file:///tmp/mock/path>
Parsing: <C|/foo/bar> against <file:///tmp/mock/path>
Parsing: <..> against <file:///C:/>
Parsing: </> against <file:///C:/a/b>
Parsing: </> against <file://h/C:/a/b>

@valentin, I noticed that these ones were attributed to Bug 1507354, however they don't seem to be addressed by the current patch we have. Can you comment on whether they should be included in this bug, Bug 1507354, or maybe we need a new bug?:

Parsing: <C|> against <file://host/D:/dir1/dir2/file>
Parsing: <C|#> against <file://host/dir/file>
Parsing: <C|?> against <file://host/dir/file>
Parsing: <C|/> against <file://host/dir/file>
Parsing: <C| /> against <file://host/dir/file>
Parsing: <C|\> against <file://host/dir/file>
Parsing: <file://[1::8]/C:/> against <about:blank>```
Flags: needinfo?(valentin.gosu)

(In reply to Ed Guloien [:edgul] from comment #5)

I did a quick pass over the tests we expect to be fixed by this bug. I'm pretty sure these ones should be addressed here:

Parsing: < File:c|////foo\bar.html> against <file:///tmp/mock/path>
Parsing: <C|/foo/bar> against <file:///tmp/mock/path>
Parsing: <..> against <file:///C:/>
Parsing: </> against <file:///C:/a/b>
Parsing: </> against <file://h/C:/a/b>

Right, these should be fixed here, except the last one which has a host and should go to bug 1507354.

@valentin, I noticed that these ones were attributed to Bug 1507354, however they don't seem to be addressed by the current patch we have. Can you comment on whether they should be included in this bug, Bug 1507354, or maybe we need a new bug?:

Parsing: <C|> against <file://host/D:/dir1/dir2/file>
Parsing: <C|#> against <file://host/dir/file>
Parsing: <C|?> against <file://host/dir/file>
Parsing: <C|/> against <file://host/dir/file>
Parsing: <C| /> against <file://host/dir/file>
Parsing: <C|\> against <file://host/dir/file>
Parsing: <file://[1::8]/C:/> against <about:blank>```

We can check whether applying the patches in bug 1507354 and the patches here fixes these test cases too, but we can't fix these without allowing a host in file URLs.

Flags: needinfo?(valentin.gosu)
Attachment #9405112 - Attachment description: Bug 1873976 - Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> and <..> against <file:///C:/> r?valentin → WIP: Bug 1873976 - Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> and <..> against <file:///C:/> r?valentin
Attachment #9405112 - Attachment description: WIP: Bug 1873976 - Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> and <..> against <file:///C:/> r?valentin → Bug 1873976 - Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> and <..> against <file:///C:/> r?valentin
Blocks: 1902687
No longer blocks: 1902687
See Also: → 1902687
Pushed by eguloien@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/52a75a6d604a Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> and <..> against <file:///C:/> r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: