Bug 1873976 - Fix incorrect parsing: <file:c:\foo\bar.html> against <file:///tmp/mock/path> and <..> against <file:///C:/> r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D212331